package com.uitopic.restock.platform.devices.domain.model.valueobjects;

public enum DeviceStatus {
    REGISTERED,
    CONFIGURED,
    CALIBRATED,
    ACTIVE,
    INACTIVE
}
